--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Nike Shop</title>
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="head__div">
-            <a class="head__div-a" href="swoosh.html">Sobre Nosotros |</a>
+            <a class="head__div-a" href="nosotros.html">Sobre Nosotros |</a>
             <a class="head__div-a" href="contacto.html">Contactanos</a>
         </div>
         
@@ -27,12 +30,13 @@
             <h2>Tienda Air Jordan</h2>
             <a class="banner__a" href="productos.html">Ingresar</a>
         </section>
+
         <h3 class="text-center">Productos Destacados</h3>
         <section id="muestra">
-            <a href="productos.html"><img class="muestra__div-img" src="imagenes/jordan1.png" alt="Producto destacado 1"></a>
-            <a href="productos.html"><img class="muestra__div-img" src="imagenes/jordan2.png" alt="Producto destacado 2"></a>
-            <a href="productos.html"><img class="muestra__div-img" src="imagenes/jordan3.png" alt="Producto destacado 3"></a>
-            <a href="productos.html"><img class="muestra__div-img" src="imagenes/jordan4.png" alt="Producto destacado 4"></a>  
+            <a class="muestra__a" href="productos.html"><img class="muestra__img" src="imagenes/jordan1.png" alt="Producto destacado 1"></a>
+            <a class="muestra__a" href="productos.html"><img class="muestra__img" src="imagenes/jordan2.png" alt="Producto destacado 2"></a>
+            <a class="muestra__a" href="productos.html"><img class="muestra__img" src="imagenes/jordan3.png" alt="Producto destacado 3"></a>
+            <a class="muestra__a" href="productos.html"><img class="muestra__img" src="imagenes/jordan4.png" alt="Producto destacado 4"></a>  
         </section>
     </main>
     <footer>
@@ -44,9 +48,9 @@
             <h5 class="text-center">Navegador</h5>
             <nav class="footer__div-nav">
                 <ul class="footer__div-ul">
-                    <li class="footer__div-item"><a class="footer__div-a" href="index.html">Inicio</a></li>
+                    <li class="footer__div-item"><a class="footer__div-a" href="#">Inicio</a></li>
                     <li class="footer__div-item"><a class="footer__div-a" href="productos.html">Tienda Air Jordan</a></li>
-                    <li class="footer__div-item"><a class="footer__div-a" href="swoosh.html">Sobre Nosotros</a></li>
+                    <li class="footer__div-item"><a class="footer__div-a" href="nosotros.html">Sobre Nosotros</a></li>
                     <li class="footer__div-item"><a class="footer__div-a" href="contacto.html">Contactanos</a></li>
                 </ul>
             </nav>
@@ -59,13 +63,13 @@
                 <input type="submit">
                 </form>
             </div>
-            
-            <div class="text-center">
-                <h6 class="text-center">Redes Sociales</h6>
-                <a href=""><img src="imagenes/blanco.jpg" alt=""></a>
-                <a href=""><img src="imagenes/blanco.jpg" alt=""></a>
-                <a href=""><img src="imagenes/blanco.jpg" alt=""></a>
-                <a href=""><img src="imagenes/blanco.jpg" alt=""></a>
+
+            <div class="text-center footer__div-div">  
+                <h6 class="text-center item-1">Redes Sociales</h6>
+                <a class="item-2" href=""><img src="imagenes/blanco.jpg" alt=""></a>
+                <a class="item-3" href=""><img src="imagenes/blanco.jpg" alt=""></a>
+                <a class="item-4" href=""><img src="imagenes/blanco.jpg" alt=""></a>
+                <a class="item-5" href=""><img src="imagenes/blanco.jpg" alt=""></a>
             </div>
         </div>
    </footer>
