--- a/productos.html
+++ b/productos.html
@@ -6,11 +6,14 @@
     <title>Air Jordan Shop</title>
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="head__div">
-            <a class="head__div-a" href="swoosh.html">Sobre Nosotros |</a>
+            <a class="head__div-a" href="nosotros.html">Sobre Nosotros |</a>
             <a class="head__div-a" href="contacto.html">Contactanos</a>
         </div>
         
@@ -69,7 +72,7 @@
                 <ul class="footer__div-ul">
                     <li class="footer__div-item"><a class="footer__div-a" href="index.html">Inicio</a></li>
                     <li class="footer__div-item"><a class="footer__div-a" href="productos.html">Tienda Air Jordan</a></li>
-                    <li class="footer__div-item"><a class="footer__div-a" href="swoosh.html">Sobre Nosotros</a></li>
+                    <li class="footer__div-item"><a class="footer__div-a" href="nosotros.html">Sobre Nosotros</a></li>
                     <li class="footer__div-item"><a class="footer__div-a" href="contacto.html">Contactanos</a></li>
                 </ul>
             </nav>
@@ -83,12 +86,12 @@
                 </form>
             </div>
             
-            <div class="text-center">
-                <h6 class="text-center">Redes Sociales</h6>
-                <a href=""><img src="imagenes/blanco.jpg" alt=""></a>
-                <a href=""><img src="imagenes/blanco.jpg" alt=""></a>
-                <a href=""><img src="imagenes/blanco.jpg" alt=""></a>
-                <a href=""><img src="imagenes/blanco.jpg" alt=""></a>
+            <div class="text-center footer__div-div">
+                <h6 class="text-center item-1">Redes Sociales</h6>
+                <a class="item-2" href=""><img src="imagenes/blanco.jpg" alt=""></a>
+                <a class="item-3" href=""><img src="imagenes/blanco.jpg" alt=""></a>
+                <a class="item-4" href=""><img src="imagenes/blanco.jpg" alt=""></a>
+                <a class="item-5" href=""><img src="imagenes/blanco.jpg" alt=""></a>
             </div>
         </div>
    </footer>
