--- a/nosotros.html
+++ b/nosotros.html
@@ -4,26 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nosotros - Nike</title>
-    <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body>
     <header>
-        <div class="head__div">
-            <a class="head__div-a" href="nosotros.html">Sobre Nosotros |</a>
-            <a class="head__div-a" href="contacto.html">Contactanos</a>
-        </div>
-        
-        <nav class="head__nav">
-            <a href="index.html"><img class="head__nav-img" src="imagenes/LogoNike.png" alt="Logo de Nike"></a>
-            <a href="productos.html"><img class="head__nav-img" src="imagenes/logoJordan1.png" alt="Logo Nike Air Jordan"></a>
-        </nav>
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <a href="index.html"><img class="banner-img" src="imagenes/LogoNike.png" alt="Logo Nike"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+          </nav>
+          <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
+            <div class="bg-light">
+                <nav>
+                    <ul class="navbar-nav justify-content-center">
+                        <li class="nav-item p-5"><a href="index.html" class="text-decoration-none h4">NIKE</a></li>
+                        <li class="nav-item p-5"><a href="productos.html" class="text-decoration-none h4">AIR JORDAN SHOP</a></li>
+                        <li class="nav-item p-5"><a href="nosotros.html" class="text-decoration-none h4">SOBRE NOSOTROS</a></li>
+                        <li class="nav-item p-5"><a href="contacto.html" class="text-decoration-none h4">CONTACTO</a></li>
+                    </ul>
+                </nav>
+            </div>
+          </div>
     </header>
     <main>
-        <section>
+        <section id="banner">
+            <div class="banner__div">
+                <h2 class="banner__div-text">NIKE.</h2>
+                <div class="gradiente-1"><div class="gradiente-2"></div></div>
+                <div class="gradiente-3"><div class="gradiente-4"></div></div>
+            </div>
+        </section>
+        <section id="nosotros">
             <article class="container-fluid p-5">
                 <h2 class="text-center display-4">Colaboracion con Michael Jordan</h2>
                 <div class="p-5 row align-items-center">
@@ -31,7 +49,7 @@
                         <img class="col-12 col-sm-12 col-md-12 col-lg-12" src="imagenes/jordanShoes.jpg" alt="">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-7 ">
-                        <h2><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga modi eveniet libero aut unde quaerat natus expedita asperiores necessitatibus, nisi dicta molestiae, voluptatibus dolores vitae vel quos sapiente nemo quisquam.</p></h2>
+                        <p class="h3 text-justify"> En 1984, vio la luz el Air Jordan, la primera colaboración entre Nike y la estrella en ascenso Michael Jordan. Por medio de múltiples innovaciones de producto, expansiones y colaboraciones continuas, el equipo Jordan convirtió la silueta del Jumpman en un icono del calzado deportivo a la altura de Michael Jordan. El equipo hoy se enfoca en construir el futuro de la marca, desde el producto que se volverá emblema del mañana a los equipos mundiales y las prácticas empresariales.</p>
                     </div>
                 </div>
             </article>
@@ -43,7 +61,7 @@
                         <img class="col-12 col-sm-12 col-md-12 col-lg-12" src="imagenes/mambaShoes.jpg" alt="">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-7 ">
-                        <h2><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga modi eveniet libero aut unde quaerat natus expedita asperiores necessitatibus, nisi dicta molestiae, voluptatibus dolores vitae vel quos sapiente nemo quisquam.</p></h2>
+                        <p class="h2 pb-5">Las nuevas zapatillas de Kobe rinden homenaje a la Mamba Mentality que se esconde en los jugadores que no dudan en poner a prueba sus límites.<br><blockquote class="h3">"La Mamba Mentality es una búsqueda constante de respuestas. Es esa curiosidad infinita, la ambición de querer mejorar, de solucionar las cosas. Si tienes esta actitud, no te preocupa el resultado final."</blockquote> <small class="text-muted h4">Kobe Bryant</small></p>
                     </div>
                 </div>
             </article>
@@ -52,13 +70,13 @@
                 <h2 class="text-center display-4">Publicidades</h2>
                 <div class="p-5 row align-items-center">
                     <div class="col-lg-4">
-                        <iframe width="100%" height="500" src="https://www.youtube.com/embed/4gncBADVKkw" title="Nike - Tú Sin Límites" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/4gncBADVKkw" title="Nike - Tú Sin Límites" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                     <div class="col-lg-4">
-                        <iframe width="100%" height="500" src="https://www.youtube.com/embed/NljGurzPM2g" title="Nike presenta: Just Do It -- Possibilities" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/NljGurzPM2g" title="Nike presenta: Just Do It -- Possibilities" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                     <div class="col-lg-4">
-                        <iframe width="100%" height="500" src="https://www.youtube.com/embed/Tz2643pkb6k" title="Nike: Find your greatness/ Encuentra tu grandeza" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/Tz2643pkb6k" title="Nike: Find your greatness/ Encuentra tu grandeza" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div> 
             </article>
@@ -67,8 +85,8 @@
     </main>
     <footer>
         <div class="footer__div">
-            <h4>Sobre nosotros</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tenetur adipisci eius quae nostrum enim alias, quis corporis!</p>
+            <h4>Nike</h4>
+            <p>Ofrecer inspiración e innovación a todos los atletas* del mundo.<br> <cite class="text-secondary">*Si tienes cuerpo, eres atleta</cite></p>
         </div>
         <div class="footer__div">
             <h5 class="text-center">Navegador</h5>
@@ -86,7 +104,7 @@
                 <form action="texto.txt">
                 <label for="email">Newsletter</label>
                 <input type="email" id="email" placeholder="Email">
-                <input type="submit">
+                <input type="submit" class="btn btn-light">
                 </form>
             </div>
 
